# dailp-encoding

./: .editorconfig  .envrc  .gitignore  .sqlfluff  .terraform.lock.hcl  Cargo.toml  Cross.toml  LICENSE  README.md  check.sh  dailp-encoding.xpr  flake.nix  log.txt  netlify.toml  package-lock.json  package.json  result  rust-toolchain.toml  schema.graphql.json  serverless.yml  shell.nix  sqlx-data.json
admin-event-handlers/: Cargo.toml
converter/: .gitignore  Cargo.toml  default.nix  macros.xml  template.xml
converter/src/: encode.rs  main.rs  retrieve.rs
encoder/: .gitignore  Cargo.toml  default.nix  macros.xml  package-lock.json  package.json  readme.md  serverless.yml  template.tera.xml
encoder/src/: annotation.rs  database.rs  dictionary.rs  document.rs  encode.rs  form.rs  lexical.rs  lib.rs  main.rs  retrieve.rs  retrieve_main.rs  structured.rs  tag.rs  translation.rs
graphql/: .gitignore  Cargo.toml  package.json  readme.md  schema.graphql  serverless.yml
graphql/.sqlx/: query-075d6a8230eb7246513b111a111fc1433e967f16551d25b430ef211817f0666c.json  query-2602151b0b02e7def582ae9adf17a0153514378a068b267334fe90e69e97b363.json  query-2bd1bc1888b889a4dc59d1824c9e1787492602e2850aa2a4b487d4376eaa2a36.json  query-2cd850e19f25a475e87dc145dd1905fbf0af2b65f819b9caaa0ff71cac411b95.json  query-2de4ffee6fd22585e8c39260e3bc30698f215cd349daf3e7a1172097101beb52.json  query-388c671a0e5cf32298db07a5286a1ecb0efe59c9ddbdff1c7c49f79454a21801.json  query-3b0b4d896036ab2e88c29c9e98b0ec85ffc6d084774a4b499c70afac580c826b.json  query-3cf2408c84d9004128643f0e8e96747328340bf155ff46e3c21642a25518e81e.json  query-43e42033828a07a488a1fbe4be6a5c7cea9d5c8d471d51a9fd39f939abd060f6.json  query-485b68540ad5d84e5e98c8ec34d4bbc9ddf5a4d129dca5aa9a87b5217c26e9a0.json  query-5658907658d581f2644f3eb0bc921269e317e3b5386efa73fb76c6e611ae34ce.json  query-71674fa0e3cc15ae4ab9509aed80adcf20010b5d7bcf7e68a88d95e685abb323.json  query-73409561936ce0fa2234c9b37c12419fd61bed4d25a4a87599bbf646b80c7d9f.json  query-7cd63426900d1ed9bfaf14ed2b3fe36abc140ba5dd300b8d17c4b82f287a3537.json  query-8cb0a451858f4732fb2ad08616b5654aaeca3c60f861105227d43aebedab71e3.json  query-8d3ceaae6a15910949eceeeff805e3a93231b1d234897dc2f8bd71fc6df3baaa.json  query-8f23f2ea8730fc8f24aee4a5a62d102d386a68749f299d84b341513a5b9048c5.json  query-997a6b67374a45f8069b7d705048c3a5809123915a689afbfe41b469298d66dc.json  query-99d55eae86048794baccc42af37865490076942b51b668f9f22e178189f87db4.json  query-9ca4777c2467a1c905282887ba13a518fcc32730683509386941fbecd5b322f1.json  query-9f25d7904e761e4a2503d49da62c92df0020e1f6f19ede29621f8bc22395553c.json  query-9fb47c8eb49c684dfbc203446a131bcbe29d26092d7b45002c3580d72c74c327.json  query-ad6298118abd413f4b812fac74d3b3eca67df20cb41fe98fa69c31e4b0c46b0b.json  query-bba471ad9b42019470e67093fe974374468b993c472479dfae34b60d505188c0.json  query-bd01d061f04d7e8e1087d2c68e31bb3a08bb3e1da52b4b094608d3ebb45c88ff.json  query-e18c55d3be3d173eb0c3aadb4d29069e99e545ce011745d704417ac1ee7e7442.json  query-ebd7ea3704612943925067787da8278820b2e69cfba662e56752a9da59cb449a.json  query-f2c4999389ca455e12e0349afcfab508671042d19332a39a3bad8d85b688f65b.json  query-f646d0a6f29207b1316c9c963db45928a70f116906d48c25ef8474e56eeaa096.json  query-fb97bbe20200bf87afa0466d52c145bfb0647add1644fe14b9248440837cec3b.json  query-ff252e407214c43a05d58a9554e6eed3cfed3fb589f02489a63f5b447252b2af.json
graphql/src/: cognito.rs  dailp_auth.rs  dailp_user_pool_jwks.json  email.rs  generate-schema.rs  lambda.rs  lib.rs  main.rs  outbound_lambda.rs  query.rs  server.rs
migration/: Cargo.toml  macros.tera.xml  pages.csv  readme.md  template.tera.xml
migration/src/: audio.rs  connections.rs  contributors.rs  early_vocab.rs  edited_collection.rs  lexical.rs  main.rs  menu.rs  pages.rs  spreadsheets.rs  tags.rs  translations.rs  user_documents.rs  validate.rs
types/: Cargo.toml  readme.md  sqlx-data.json
types/.sqlx/: query-04f6cc862c303c064d806cfdad1c887ff986090a10e6c9c364165a800c711ca5.json  query-06df1964f758ac1d6a38824db0b238c080e871211565e3f762ef3db8c48595d9.json  query-077357271c84263b31217c7b9bf11c8102b7e049508ddfeec9f383df85c0844d.json  query-07c44e7e2037267dcdd8fcb9cb1e922a8c35460116cb1611064116ccbb149ad4.json  query-08a7959bd2d50f96af8a5b5a6e35308c86cbc2185dc628bc5d38a472c309e77e.json  query-09702b8807c689d6f0a08f192cb85eac96a528ea341a0d932e038e8d27fb5689.json  query-0997e00e90122044de0897cf3c61d4b71edbe7b8e63ef27d45e739c95bca81fb.json  query-0c697fa7d3e8459a4577e54b76a3b17bf1c872d3aa5cecb7a585d1b664261350.json  query-0e995da055ea3f3d54a9ee3945334094938fbf46116397007d05e628172e02ec.json  query-0eb2611a2add1d2fd8846a5356c70a271cf36e11de160929005d6d269be11816.json  query-0eb7a20b6f240395c632e18ebe2aa7867c5e80c9516797fa44bedde694a512c4.json  query-101e4e1aa1d4b3123a8cba2b3615c94b06e675a87576c1430104ab5aaa60f3c1.json  query-10e4b3b3beac67a0e900359c051c94405e9605a64edb7ac0decb8f9aa51f738f.json  query-111528602fe0b3526ee8b1f1738c90d4715021bd6e194e0839df3bc6480525b6.json  query-11d910bdf8267e8d9fecdb517618c7a4448b69c705410052f93fc4a529be73b4.json  query-12859072477e04e63ca1899ec1205a446f52c32484751ae03ce03a4850f00a83.json  query-12f59b4408be36de5644c1b1cdc18f96c57175dabadc8061046413f4436ec1c2.json  query-135c9817f7c50fa78c7d5bb4f2bfe950a0e7fa24fcb67169974fd885620ed78c.json  query-14bc4af10285a772628a5a0b9dc81b3e8a9473d4d1fdf17aa84b24196ff84245.json  query-15e338c47089a2352b2470c60da5784405b2f8de49d56f119d3d98fe8d4dc4db.json  query-1662927916c3346c93cc3417ca291ba3374b05f8b94625d04df1cf0514870a2f.json  query-194fa1f09557f434e0c7cb93dabd2ee8d6a266131f2898676c386fd5cdb873b3.json  query-1badd21d7f93bca9283a79dc6f80c74efeb831870447f8944f5d1d059e0d0f55.json  query-1c0800a6ac2d039a22bb52f79416f9305e1453663217179323312ded60b422e9.json  query-1d5acf76c93942a65d6db48a933a51d2abe7c4fbcaa91a1af4f1cf38f2e5b900.json  query-1dcb94a92cf69699d7e0db1f8b1cbd36a2aa2558823274c9399bd65bd39ab3a4.json  query-1e0a034fc5859d4605e455709275f2b41c489fca801364215e3a1f54d07b646d.json  query-1eb8c4d5668c8b8302c25e05bd5c694139ef382302672021c5510729d84102b1.json  (+214 more)
types/src/: audio.rs  (+33 more)
(+1151 files in other folders)
