[package]
name = "dailp-admin-event-handlers"
version = "0.1.0"
authors = ["Naomi Trevino <n.trevino@northeastern.edu>"]
edition = "2021"

# Function Binary definitions
# each lambda function should have its own unique binary

[[bin]]
name = "dailp-auth-post-confirmation"
path = "src/auth/post-confirmation/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.20", features = ["full", "time"] }
anyhow = "1.0"
itertools = "0.10"
futures = "0.3"
dotenv = "0.15"
regex = "1.5"
rayon = "1.4"
lazy_static = "1.4"
base64 = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
lambda_runtime = "^0.9"
aws-config = "^1"
aws-sdk-cognitoidentityprovider = "^1"
aws_lambda_events = "0.13.1"

dailp = {path = "../types"}
