[package]
name = "admin-event-handlers"
version = "0.1.0"
authors = ["Naomi Trevino <n.trevino@northeastern.edu>"]
edition = "2021"

# Function Binary definitions
# each lambda function should have its own unique binary
[[bin]]
name = "auth-post-confirmation"
path = "src/auth/post-confirmation/main.rs"

[dependencies]
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["cognito"] }

lambda_runtime = "0.9.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
anyhow = "1.0"
itertools = "0.10"
futures = "0.3"
dotenv = "0.15"
regex = "1.5"
rayon = "1.4"
lazy_static = "1.4"
base64 = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
aws-config = "^1"
aws-sdk-cognitoidentityprovider = "^1"
dailp = {path = "../types"}