[package]
name = "converter"
version = "0.1.0"
authors = ["Taylor Snead <taylorsnead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde-xml-rs = "0.4"
quick-xml = { version = "0.17", features = [ "serialize" ] }
xml-rs = "0.8"
tera = "1"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
anyhow = "*"
itertools = "*"
