[package]
name = "dailp-data"
version = "0.1.0"
authors = ["Taylor Snead <taylorsnead@gmail.com>"]
edition = "2018"
default-run = "encoder"

[[bin]]
name = "graphql"
path = "src/main.rs"

[[bin]]
name = "encoder"
path = "src/retrieve_main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
tera = "1"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0"
itertools = "0.9"
async-graphql = {git = "https://github.com/async-graphql/async-graphql", rev = "5f14325ef5bded27832a79c08d70034c1e5a9d6a"}
futures = "0.3"
mongodb = "*"
lambda = {git = "https://github.com/awslabs/aws-lambda-rust-runtime"}
lambda_http = {git = "https://github.com/awslabs/aws-lambda-rust-runtime"}
dotenv = "0.15"
regex = "1.3"
lazy_static = "1.4"
async_once = {version = "0.1", features = ["tokio"]}
rayon = "1.4"
