[package]
name = "dailp-graphql"
version = "0.2.1"
authors = ["Shelby Snead <taylor@snead.xyz>"]
edition = "2021"

[[bin]]
name = "dailp-graphql"
path = "src/lambda.rs"

[[bin]]
name = "dailp-graphql-local"
path = "src/server.rs"

[[bin]]
name = "dailp-graphql-schema"
path = "src/generate-schema.rs"

[dependencies]
serde_json = "1.0"
tokio = { version = "1.20", features = ["full", "time"] }
anyhow = "1"
futures = "0.3"
lambda_http = "0.5"
dotenv = "0.15"
lazy_static = "1.4"
itertools = "0.10"
async_once = "0.2"
base64 = "0.13"
serde = "1"
serde_with = "1.9"
serde_plain = "0.3"
async-trait = "*"
log = "0.4"
pretty_env_logger = "0.4"
# Used for running a local server.
async-graphql-tide = "4"
tide = "0.16"
async-std = { version = "1", features = ["attributes", "tokio1"] }
jsonwebtoken = "8"

dailp = {path = "../types"}
reqwest = "0.12.24"
