[package]
name = "dailp-migration"
version = "0.3.0"
authors = ["Taylor Snead <taylorsnead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
tera = "1"
reqwest = { version = "0.10.10", features = ["json", "rustls-tls"] }
tokio = { version = "0.2", features = ["full", "time"] }
futures-retry = "0.5"
anyhow = "*"
itertools = "*"
futures = "*"
dotenv = "0.15"
regex = "1.3"
rayon = "1.4"
chrono = "*"
rand = "*"
lazy_static = "*"
base64 = "*"

dailp = {path = "../types"}
