[package]
name = "dailp-migration"
version = "0.3.0"
authors = ["Taylor Snead <taylor@snead.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
tera = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.5", features = ["full", "time"] }
futures-retry = "0.6"
anyhow = "*"
itertools = "*"
futures = "*"
dotenv = "0.15"
regex = "1.3"
rayon = "1.4"
chrono = "*"
rand = "*"
lazy_static = "*"
base64 = "*"
log = "0.4"
pretty_env_logger = "0.4"

dailp = {path = "../types"}
