[package]
name = "dailp-migration"
version = "0.3.0"
authors = ["Shelby Snead <taylor@snead.xyz>"]
edition = "2021"

[[bin]]
name = "dailp-migration"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tera = "1.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.20", features = ["full", "time"] }
anyhow = "1.0"
itertools = "0.10"
futures = "0.3"
dotenv = "0.15"
regex = "1.5"
rayon = "1.4"
lazy_static = "1.4"
base64 = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
csv = "1.1"

dailp = {path = "../types"}
