[package]
name = "dailp"
version = "0.4.0"
authors = ["Taylor Snead <taylor@snead.xyz>"]
edition = "2018"

[lib]
name = "dailp"
path = "src/lib.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
tokio = { version = "1.5", features = ["full", "time"] }
tokio-stream = "0.1"
anyhow = "1.0"
itertools = "0.10"
async-graphql = { version = "2.8", features = ["dataloader"] }
futures = "0.3"
mongodb = "2.0.0-alpha.1"
lazy_static = "1.4"
regex = "1.3"
unicode-normalization = "0.1"
chrono = {version = "0.4", features = ["serde"]}
nom = "5"
slug = "0.1"
maplit = "1"
async-trait = "0.1.42"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
