[package]
name = "dailp"
version = "0.5.0"
authors = ["Taylor Snead <taylor@snead.xyz>"]
edition = "2018"

[lib]
name = "dailp"
path = "src/lib.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
tokio-stream = "0.1"
anyhow = "1.0"
itertools = "0.9"
async-graphql = { version = "3.0", features = ["dataloader", "uuid"] }
futures = "0.3"
mongodb = "2.0"
uuid = { version = "0.8.2", default-features = false, features = ["std", "serde"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "chrono", "json", "uuid", "offline"] }
lazy_static = "1.4"
regex = "1.3"
unicode-normalization = "0.1"
chrono = {version = "0.4", features = ["serde"]}
nom = {version = "6", default-features = false, features = ["std", "bitvec"]}
slug = "0.1"
maplit = "1"
async-trait = "0.1.42"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
